# geohexviz

./: .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  LICENSE  License.md  MANIFEST.in  README.md  README.rst  environment.yml  meta.yaml  paper.bib  paper.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: draft-pdf.yml  gen.yml  geohexviz-automated-tests-conda.yml  geohexviz-automated-tests-pip.yml  geohexviz-automated-tests-windows.yml  geohexviz-automated-tests-wndows2.yml  geohexviz-automated-tests.yml  main.yml  tester.yml
docs/paper/: paper.bib  paper.md  testing
examples/: EXAMPLES.md  tutorial-geohexsimple.ipynb  tutorial-geohexviz.ipynb  tutorial-installation.md
examples/example1/: INFO.md  data.csv  example1.json  example1.yml
examples/example2/: data-epicenters.csv  example2.py
examples/example3/: INFO.md  data-1943.csv  data-1945.csv  example3.json  example3.py
examples/example4/: INFO.md  data.csv  example4.ipynb  example4.py  example4.yml
examples/forest_fires/: README.md  example4.json  json_structure.json  json_walkthrough.md  python_walkthrough.ipynb  python_walkthrough.py
examples/mass_shootings/: INFO.md  README.md  data-epicenters.csv  data.csv  example2.yml  json_structure.json  json_walkthrough.md  python_walkthrough.ipynb  python_walkthrough.py
examples/search_and_rescue/: INFO.md  data.csv  json_structure.json  json_walkthrough.md  python_walkthrough.ipynb  python_walkthrough.py
examples/tutorial-installation/: TUTORIAL.md
examples/ww2_bombings/: README.md  data-1943.csv  data-1944.csv  example3.yml  json_structure.json  (+3 more)
geohexsimple/: __init__.py  simple.py
geohexviz/: __init__.py  builder.py  errors.py  simple.py  templates.py
geoviz/: builder.py  builderrev.py  builderrevised.py  errors.py  hexgrid.py  templates.py
recipe/: meta.yaml
scripts/: geohexsimple.py
tests/: test_builder.py  test_builder2.py  test_builderrevised.py  test_geoutils.py  test_hexgrid.py  test_plot_util.py  testingstructures.py
(+57 files in other folders)
