[metadata]
name = geohexviz-tonyzeidan
version = 1.0.0
author = Tony Abou Zeidan
author_email = tony.azp25@gmail.com
description = A library for the visualization of hexagonally binned data sets
long_description = file: README.rst
long_description_content_type = text/markdown
url =
project_urls =
    Bug Tracker =
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6